@@ -94,6 +94,7 @@ export(getGeneric)
 export(getGenerics)
 export(getGroup)
 export(getGroupMembers)
+export(getLoadActions)
 export(getMethod)
 export(getMethods)
 export(getMethodsForDispatch)
@@ -106,6 +107,7 @@ export(getSubclasses)
 export(getValidity)
 export(getVirtual)
 export(hasArg)
+export(hasLoadAction)
 export(hasMethod)
 export(hasMethods)
 export(inheritedSlotNames)
@@ -177,6 +179,7 @@ export(setDataPart)
 export(setGeneric)
 export(setGroupGeneric)
 export(setIs)
+export(setLoadActions)
 export(setMethod)
 export(setOldClass, .OldClassesList)
 export(setPackageName)
